test/files/neg/t1033.check
t1033.scala:5: error: return outside method definition
      return 10
      ^
one error found
